<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="goin">Button</string>
    <string name="imag1">TODO</string>
    <string name="todoo">TODO</string>
    <string name="ilearing">iLearing</string>
    <string name="login">LOGin</string>
    <string name="ilearning">iLearning</string>
    <string name="button">Button</string>
    <string name="username1">Username</string>
    <string name="pass">Pass</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="todo1">TODO</string>
    <string name="tod">TODO</string>
    <string name="cambridge_young_learners_english">Cambridge Young Learners English</string>
    <string name="movers_reading_writing"><![CDATA[Movers Reading & Writing]]></string>
    <string name="practice_paper">Practice Paper</string>
    <string name="tos">to</string>
    <string name="tt">TODO</string>
    <string name="ton">TODO</string>
    <string name="too">TODO</string>
    <string name="ta">TODO</string>
    <string name="ee">4</string>
    <string name="s">7</string>
    <string name="sd">5</string>
    <string name="ds">8</string>
    <string name="sdw">6</string>
    <string name="wds">1</string>
    <string name="dwd">9</string>
    <string name="ty">TODO</string>
    <string name="ex1">1</string>
    <string name="ex2">2</string>
    <string name="ex3">3</string>
    <string name="ex4">4</string>
    <string name="ex5">5</string>
    <string name="ex6">10</string>
    <string name="ex7">2</string>
    <string name="ex8">3</string>
    <string name="e2">2)</string>
    <string name="e3">3)</string>
    <string name="e4">4)</string>
    <string name="e5">5)</string>
    <string name="e6">6)</string>
    <string name="e1">1)</string>
    <string name="th">TODO</string>
    <string name="df">TODO</string>
    <string name="v1f">TODO</string>
    <string name="vf">TODO</string>
    <string name="bg">TODO</string>
    <string name="nhnh">tof</string>
    <string name="yy">yy</string>
    <string name="fg">fg</string>
    <string name="fd">fd</string>
    <string name="lk">TODO</string>
    <string name="jk">jk</string>
    <string name="ex11">1</string>
    <string name="tg">TODO</string>
    <string name="tosy">t</string>
    <string name="thj">TODO</string>
    <string name="d">nhfgv</string>
    <string name="gfhfg">gfhfg</string>
    <string name="nhy">nhy</string>
    <string name="nymnbcf">nymnbcf</string>
    <string name="nftgcb">nftgcb</string>
    <string name="hytd">hytd</string>
    <string name="reas">reas</string>
    <string name="gtrsvds">gtrsvds</string>
    <string name="hgtes">hgtes</string>
    <string name="r1">1</string>
    <string name="t1">1)</string>
    <string name="t2">2)</string>
    <string name="t3">3)</string>
    <string name="r2">2</string>
    <string name="r3">3</string>
    <string name="t5">5</string>
    <string name="t6">6</string>
    <string name="t7">7</string>
    <string name="t8">8</string>
    <string name="y9">9</string>
    <string name="y10">10</string>
    <string name="y5">4)</string>
    <string name="y3">4</string>
    <string name="j7">6)</string>
    <string name="k8">5)</string>
    <string name="z1">1</string>
    <string name="z2">2</string>
    <string name="x5">5</string>
    <string name="_3.1">3</string>
    <string name="_6.1">6</string>
    <string name="_1.1">1</string>
    <string name="_6.2">6</string>
    <string name="_5.1">5</string>
    <string name="_4.1">4</string>
    <string name="_1.2">1</string>
    <string name="_10.1">10</string>
    <string name="_8.1">8</string>
    <string name="_7.1">7</string>
    <string name="_2.1">2</string>
    <string name="_5.2">5</string>
    <string name="_9.1">9</string>
    <string name="_3.2">3</string>
    <string name="_4.2">4</string>
    <string name="_5.3">5</string>
    <string name="_3.3">3</string>
    <string name="_2.2">2</string>
    <string name="_1.3">1</string>
    <string name="_7.2">7</string>
    <string name="_6.3">6</string>
    <string name="_1.4">1</string>
    <string name="_5.4">5</string>
    <string name="_4.3">4</string>
    <string name="_2.3">2</string>
    <string name="_3.4">3</string>
    <string name="_2.4">2</string>
    <string name="_4.4">4</string>
    <string name="_3.5">3</string>
    <string name="_1.5">1</string>
    <string name="_5.5">5</string>
    <string name="_3.6">3</string>
    <string name="_1.6">1</string>
    <string name="_4.5">4</string>
    <string name="_2.5">2</string>
    <string name="_3.7">3</string>
    <string name="_10.2">10</string>
    <string name="_9.2">9</string>
    <string name="_8.2">8</string>
    <string name="_1.7">1</string>
    <string name="_7.3">7</string>
    <string name="_7.4">7</string>
    <string name="_6.4">6</string>
    <string name="_4.6">4</string>
    <string name="_5.6">5</string>
    <string name="_2.6">2</string>
    <string name="_4.7">4</string>
    <string name="_2.7">2</string>
    <string name="_5.7">5</string>
    <string name="kou">kou</string>
    <string name="kiyu">kiyu</string>
    <string name="yutjtf">yutjtf</string>
    <string name="rthgrvfdcsxcg">rthgrvfdcsxcg</string>
    <string name="tgrfdgfr">tgrfdgfr</string>
    <string name="trdrsrfvcd">trdrsrfvcd</string>
    <string name="nhnhnnh">nhnhnnh</string>
    <string name="tyutrtgfhbgv">tyutrtgfhbgv</string>
    <string name="juhytgfrdbnbv">juhytgfrdbnbv</string>
    <string name="jhtbgrvdfc">jhtbgrvdfc</string>
    <string name="todlo">TODO</string>
    <string name="lilijlnm">lilijlnm</string>
    <string name="nhbgvgggggg">nhbgvgggggg</string>
    <string name="todo">TODO</string>
    <string name="_27">27</string>
    <string name="_3.8">3</string>
    <string name="_4.8">4</string>
    <string name="_2.8">2</string>
    <string name="_35">35</string>
    <string name="_34">34</string>
    <string name="_32">32</string>
    <string name="_30">30</string>
    <string name="_28">28</string>
    <string name="_26">26</string>
    <string name="_23">23</string>
    <string name="_22">22</string>
    <string name="_20">20</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_17">17</string>
    <string name="_21">21</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_13">13</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_14">14</string>
    <string name="_24">24</string>
    <string name="_3">3</string>
    <string name="_1.8">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_12">12</string>
    <string name="_25">25</string>
    <string name="_29">29</string>
    <string name="_31">31</string>
    <string name="_33">33</string>
    <string name="_1">1</string>
    <string name="_5.8">5</string>
    <string name="zazaa">zazaa</string>
    <string name="xasxz">xasxz</string>
    <string name="xszasxz">xszasxz</string>
    <string name="xszaaaaa">xszaaaaa</string>
    <string name="vfdcxdx">vfdcxdx</string>
    <string name="cszxcxzxcvcx">cszxcxzxcvcx</string>
    <string name="bvcdfgvcx">bvcdfgvcx</string>
    <string name="bvcghbv">bvcghbv</string>
    <string name="bfrgtbfd">bfrgtbfd</string>
    <string name="hbgdvscx">hbgdvscx</string>
    <string name="nbgcdxz">nbgcdxz</string>
    <string name="juujyhbg">juujyhbg</string>
    <string name="nbdvscsssssss">nbdvscsssssss</string>
    <string name="finishpet3">finish</string>
    <string name="finishpet2">finish</string>
    <string name="finishpet1">finish</string>
    <string name="_space" />
    <string name="bacck">Back</string>
    <string name="the_pronouns">The pronouns</string>
    <string name="go_to_exercises">Go to exercises</string>
    <string name="vfdxc">vfdxc</string>
    <string name="gvfdsx">gvfdsx</string>
    <string name="pronouns">Pronouns</string>
    <string name="gvfvcx">gvfvcx</string>
    <string name="_11f">11</string>
    <string name="_12f">12</string>
    <string name="buttonf">Button</string>
    <string name="_8f">8</string>
    <string name="_6f">6</string>
    <string name="_9f">9</string>
    <string name="_7f">7</string>
    <string name="_10e">10</string>
    <string name="_1e">1</string>
    <string name="_5e">5</string>
    <string name="_7e">7</string>
    <string name="gvfvcxe">gvfvcx</string>
    <string name="_11e">11</string>
    <string name="_12d">12</string>
    <string name="buttond">Button</string>
    <string name="_9d">9</string>
    <string name="_11d">11</string>
    <string name="_1d">1</string>
    <string name="_4d">4</string>
    <string name="_6d">6</string>
    <string name="_2d">2</string>
    <string name="_5c">5</string>
    <string name="_4c">4</string>
    <string name="_6c">6</string>
    <string name="_7c">7</string>
    <string name="_8c">8</string>
    <string name="_9c">9</string>
    <string name="_10c">10</string>
    <string name="_11c">11</string>
    <string name="_12c">12</string>
    <string name="_2c">2</string>
    <string name="_3c">3</string>
    <string name="_5b">5</string>
    <string name="_6b">6</string>
    <string name="_7b">7</string>
    <string name="_9b">9</string>
    <string name="_4b">4</string>
    <string name="_8b">8</string>
    <string name="_12b">12</string>
    <string name="_1b">1</string>
    <string name="_10b">10</string>
    <string name="_2b">2</string>
    <string name="_3b">3</string>
    <string name="_5a">5</string>
    <string name="_7a">7</string>
    <string name="_8a">8</string>
    <string name="_10a">10</string>
    <string name="_3a">3</string>
    <string name="dsacdscxcx">dsacdscxcx</string>
    <string name="vcdsaxz">vcdsaxz</string>
    <string name="_1a">1</string>
    <string name="vcdsxsaz">vcdsxsaz</string>
    <string name="_a">a</string>
    <string name="_b">b</string>
    <string name="n">n</string>
    <string name="numbers_chart">Numbers Chart</string>
    <string name="j">j</string>
    <string name="i">i</string>
    <string name="h">h</string>
    <string name="g">g</string>
    <string name="f">f</string>
    <string name="e">e</string>
    <string name="dffsd">d</string>
    <string name="c">c</string>
    <string name="m">m</string>
    <string name="dd">dd</string>
    <string name="hh">hh</string>
    <string name="ii">ii</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="aa">aa</string>
    <string name="bb">bb</string>
    <string name="cc">cc</string>
    <string name="eedddd">ee</string>
    <string name="ff">ff</string>
    <string name="gg">gg</string>
    <string name="jj">jj</string>
    <string name="kk">kk</string>
    <string name="ll">ll</string>
    <string name="past_simple_and_continuous2">PAST SIMPLE AND CONTINUOUS</string>
    <string name="plural_nouns">Plural Nouns</string>
    <string name="present_simple_and_continuous">PRESENT SIMPLE AND CONTINUOUS</string>
    <string name="adjectives_degrees_of_comparison3">adjectives - degrees of comparison</string>
    <string name="NextLevel">Next Grade</string>
    <string name="practice">Practice</string>
    <string name="vcxvc">vcxvc</string>
    <string name="listening">Listening</string>
    <string name="reading">READING</string>
    <string name="speaking">SPEAKING</string>
    <string name="back">Back</string>
</resources>